# cloud-run-hackathon-2025

./: HACKATHON_TUTORIAL.md  JUDGING_CRITERIA.md  PARTICIPANT_RESOURCES.md  QUICKSTART_GUIDE.md  README.md  core-requirements.md  project-overview.md  resources.md
hackathon-agent/: README.md
hackathon-agent/hackathon_agent/: agent.py
hackathon-templates/: Dockerfile  agent.py  pyproject.toml  requirements.txt  server.py
